--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-scripts": "^1.1.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6"
