--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.17.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.1",
     "pg": "^7.4.1",
     "react": "^16.3.0",
